--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,79 +2,87 @@ version: "3.5"
 
 services:
 
+  # -------------------------------------------------------
+  # NATS CLUSTER | a p2p network using seeding (port 6222)
+  # -------------------------------------------------------
+  nats-1:
+    image: "nats:1.3.0"
+    container_name: nats001
+    command: -p 4222 -m 8222 -cluster nats://172.25.255.10:6222 -auth S3Cr3T0k3n!
+    image: "nats:1.3.0"
+    networks: 
+      chainet: 
+        ipv4_address: "172.25.255.10"
+
+  nats-2:
+    image: "nats:1.3.0"
+    container_name: nats002
+    command: -p 4222 -m 8222 -cluster nats://172.25.255.11:6222 -routes nats://172.25.255.10:6222 -auth S3Cr3T0k3n!
+    expose:
+      - "6222"
+    networks: 
+      chainet: 
+        ipv4_address: "172.25.255.11"
+
+  nats-3:
+    image: "nats:1.3.0"
+    container_name: nats003
+    command: -p 4222 -m 8222 -cluster nats://172.25.255.12:6222 -routes nats://172.25.255.10:6222 -auth S3Cr3T0k3n!
+    expose:
+      - "6222"
+    networks: 
+      chainet: 
+        ipv4_address: "172.25.255.12"
+
   mongo001:
     image: mongo
     container_name: mongo001
     restart: always
     networks:
-      vpcbr:
-        ipv4_address: 10.5.0.10
+      chainet:
+        ipv4_address: "172.25.255.20"
 
   mongo002:
     image: mongo
     container_name: mongo002
     restart: always
     networks:
-      vpcbr:
-        ipv4_address: 10.5.0.11
+      chainet:
+        ipv4_address: "172.25.255.21"
 
-  chainbox001:
-    image: chainode
-    build:
-      context: ./
-      dockerfile: ./chainode/Dockerfile
-      network: host
-    container_name: chainbox001
+  nodejs:
+    image: node:10.12
+    container_name: nodejs
+    user: "1000:1000"
     volumes:
-      - ../:/appdata
-    environment:
-      - DB_HOST=10.5.0.10
-    command: /bin/bash -c "redis-server & tail -f dev/null"
-    networks:
-      vpcbr:
-        ipv4_address: 10.5.0.2
+      - ../:/app
+    command: tail -f /dev/null
+    working_dir: /app
     depends_on:
+      - nats-1
+      - nats-2
+      - nats-3
       - mongo001
+      - jaeger
+    networks:
+      chainet:
+        ipv4_address: "172.25.255.30"
 
-  chainbox002:
-    image: chainode
-    build:
-      context: ./
-      dockerfile: ./chainode/Dockerfile
-      network: host
-    container_name: chainbox002
-    volumes:
-      - ../:/appdata
+  jaeger:
+    # https://www.jaegertracing.io/docs/1.6/getting-started/#all-in-one-docker-image
+    # http://jaeger:16686
+    image: jaegertracing/all-in-one:1.7
+    container_name: jaeger
     environment:
-      - DB_HOST=10.5.0.11
-    command: /bin/bash -c "redis-server & tail -f dev/null"
-    networks:
-      vpcbr:
-        ipv4_address: 10.5.0.3
-    depends_on:
-      - mongo002
-
-  chaintest:
-    image: chainode
-    build:
-      context: ./
-      dockerfile: ./chainode/Dockerfile
-      network: host
-    container_name: chaintest
-    volumes:
-      - ../:/appdata
-    command: tail -f dev/null
-    networks:
-      vpcbr:
-        ipv4_address: 10.5.0.20
-    depends_on:
-      - chainbox001
-      - chainbox002
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+    networks: 
+      chainet: 
+        ipv4_address: "172.25.255.40"
 
 networks:
-  vpcbr:
+  chainet:
     name: chainet
     driver: bridge
     ipam:
      config:
-       - subnet: 10.5.0.0/24
+       - subnet: 172.25.255.0/24
