--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -58,6 +58,26 @@ services:
       chainet:
         ipv4_address: "172.25.255.22"
 
+  redis:
+    image: redis
+    container_name: redis
+    volumes:
+      - ./data/redis:/data
+    networks:
+      chainet:
+        ipv4_address: "172.25.255.30"
+
+  jaeger:
+    # https://www.jaegertracing.io/docs/1.6/getting-started/#all-in-one-docker-image
+    # http://jaeger:16686
+    image: jaegertracing/all-in-one:1.7
+    container_name: jaeger
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+    networks: 
+      chainet: 
+        ipv4_address: "172.25.255.40"
+
   nodejs:
     image: node:10.12
     container_name: nodejs
@@ -76,18 +96,7 @@ services:
       - jaeger
     networks:
       chainet:
-        ipv4_address: "172.25.255.30"
-
-  jaeger:
-    # https://www.jaegertracing.io/docs/1.6/getting-started/#all-in-one-docker-image
-    # http://jaeger:16686
-    image: jaegertracing/all-in-one:1.7
-    container_name: jaeger
-    environment:
-      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
-    networks: 
-      chainet: 
-        ipv4_address: "172.25.255.40"
+        ipv4_address: "172.25.255.50"
 
 networks:
   chainet:
