--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "blockgenerator001": "WEBUI_PORT=8080 PEER_ID=blockgenerator001 DB_HOST=172.25.255.20 npm run blockgenerator",
     "peer001": "WEBUI_PORT=8081 PEER_ID=peer001 DB_HOST=172.25.255.21 npm run peer",
     "peer002": "WEBUI_PORT=8082 PEER_ID=peer001 DB_HOST=172.25.255.22 npm run peer",
-    "test": "nyc mocha test --recursive --full-trace"
+    "test": "nyc mocha test --recursive --full-trace",
+    "build-webconsole-dev": "cd sdk/web-console/frontend && npm run build-dev",
+    "build-webconsole-prod": "cd sdk/web-console/frontend && npm run build-prod"
   },
   "engines": {
     "node": ">=8.0"
@@ -38,11 +40,6 @@
     "url": "https://github.com/davidemiceli/chainode/issues"
   },
   "homepage": "https://github.com/davidemiceli/chainode#readme",
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0"
-  },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -57,5 +54,10 @@
     "node-rsa": "^1.0.2",
     "redis": "^2.8.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0"
   }
 }
