--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A private blockchain network based on node.js",
   "main": "index.js",
   "scripts": {
-    "start": "bin/start",
+    "start": "node main.js",
     "blockgenerator": "node peers/blockgenerator.js",
     "peer": "node peers/peer.js",
     "blockgenerator001": "WEBUI_PORT=8080 PEER_ID=blockgenerator001 DB_HOST=172.25.255.20 npm run blockgenerator",
