--- a/web-console/frontend/package.json
+++ b/web-console/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/davidemiceli/chainode#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
@@ -36,6 +37,7 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
