--- a/docker-compose/integration-tests.yml
+++ b/docker-compose/integration-tests.yml
@@ -5,6 +5,26 @@ services:
   # -------------------------------------------------------
   # Application peers for integration tests
   # -------------------------------------------------------
+  nodejs:
+    image: node:10.12
+    container_name: nodejs
+    user: "1000:1000"
+    volumes:
+      - ../:/app
+    command: tail -f /dev/null
+    working_dir: /app
+    depends_on:
+      - nats-1
+      - nats-2
+      - nats-3
+      - mongo001
+      - mongo002
+      - mongo003
+      - jaeger
+    networks:
+      chainet:
+        ipv4_address: "172.25.255.50"
+  
   peer000:
     image: node:10.12
     container_name: peer000
@@ -22,13 +42,7 @@ services:
     command: npm start
     working_dir: /app
     depends_on:
-      - nats-1
-      - nats-2
-      - nats-3
-      - mongo001
-      - mongo002
-      - mongo003
-      - jaeger
+      - nodejs
     networks:
       chainet:
         ipv4_address: "172.25.255.51"
@@ -50,13 +64,7 @@ services:
     command: npm start
     working_dir: /app
     depends_on:
-      - nats-1
-      - nats-2
-      - nats-3
-      - mongo001
-      - mongo002
-      - mongo003
-      - jaeger
+      - peer000
     networks:
       chainet:
         ipv4_address: "172.25.255.52"
