--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "peer002": "WEBUI_PORT=8082 PEER_ID=peer001 DB_HOST=172.25.255.22 npm run peer",
     "build-webconsole-dev": "cd web-console/frontend && npm run build-dev",
     "build-webconsole-prod": "cd web-console/frontend && npm run build-prod",
-    "test": "nyc mocha test --recursive --full-trace",
+    "test": "nyc mocha test/unit --recursive --full-trace",
     "test-integration": "bin/integration-test",
     "start-dev-env": "bin/run-dev-env up -d",
     "stop-dev-env": "bin/run-dev-env down"
