--- a/package.json
+++ b/package.json
@@ -5,15 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node main.js",
-    "blockgenerator": "node peers/blockgenerator.js",
-    "peer": "node peers/peer.js",
-    "blockgenerator001": "WEBUI_PORT=8080 PEER_ID=blockgenerator001 DB_HOST=172.25.255.20 npm run blockgenerator",
-    "peer001": "WEBUI_PORT=8081 PEER_ID=peer001 DB_HOST=172.25.255.21 npm run peer",
-    "peer002": "WEBUI_PORT=8082 PEER_ID=peer001 DB_HOST=172.25.255.22 npm run peer",
     "build-webconsole-dev": "cd web-console/frontend && npm run build-dev",
     "build-webconsole-prod": "cd web-console/frontend && npm run build-prod",
-    "test": "nyc mocha test/unit --recursive --full-trace",
-    "test-integration": "bin/integration-test",
+    "test": "nyc mocha test --recursive --full-trace",
     "start-dev-env": "bin/run-dev-env up -d",
     "stop-dev-env": "bin/run-dev-env down"
   },
