--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-webconsole-prod": "cd web-console/frontend && npm run build-prod",
     "test": "nyc mocha test --recursive --full-trace",
     "start-dev-env": "bin/run-dev-env up -d",
-    "stop-dev-env": "bin/run-dev-env down"
+    "stop-dev-env": "bin/run-dev-env down",
+    "create-dev-topics": "bin/create-topics"
   },
   "engines": {
     "node": ">=8.0"
@@ -40,6 +41,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cassandra-driver": "^4.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "kafka-node": "^3.0.1",
