--- a/web-console/frontend/package.json
+++ b/web-console/frontend/package.json
@@ -30,6 +30,7 @@
     "toastr": "^2.1.4",
     "vue": "^2.5.17",
     "vue-currency-filter": "^3.2.0",
+    "vue-loading-overlay": "^3.1.1",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
