Add first draft dockerfile for dockerhub.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,8 +6,15 @@ ENV LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
     DEBIAN_FRONTEND=noninteractive
 
+# Update packages
+RUN apt-get update && \
+    apt-get install -y apt-utils git && \
+    apt-get upgrade -y
+
+RUN git clone -b develop --single-branch https://github.com/davidemiceli/chainode.git
+
 # Create app directory
-WORKDIR /app
+WORKDIR /chainode
 
 # Update npm
 RUN npm i -g npm
@@ -15,4 +22,4 @@ RUN npm i -g npm
 # Install useful packages
 RUN npm cache clean -f
 
-# CMD npm start
+CMD npm start
