--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/node_modules/
+/lib/docs/node_modules/
+/web-console/frontend/node_modules/
 jspm_packages/
 
 # Typescript v1 declaration files
